# flushq

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: test.yml
src/flushq/: __init__.py  flush_queue.py  policies.py
tests/: test_flush_queue.py  test_policies.py
