[project]
name = "flushq"
version = "0.1.0"
description = "Stateless async batching queue with pluggable flush policies (size, interval, natural)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 5
